--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,11 @@ jobs:
     strategy:
       # Test for several versions of TFX in parallel
       matrix:
-        depconstraint: ["tfx~=1.0.0 tensorflow~=2.5.0", "tfx~=1.3.0 tensorflow~=2.6.0",]
+        depconstraint: ["tfx~=1.0.0 tensorflow~=2.5.0", "tfx~=1.4.0 tensorflow~=2.6.0",]
         extras: ["all, test"]
+        include:
+          - depconstraint: "tfx~=1.4.0 tensorflow~=2.6.0"
+            extras: "all, test, feast_examplegen"
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.7
@@ -41,10 +44,9 @@ jobs:
         # Cache installed dependencies
         path: ${{ env.pythonLocation }}
         # Look to see if there is a cache hit for the corresponding setup.py + TFX version 
-        key: ${{ env.pythonLocation }}-pip-${{ hashFiles('setup.py') }}-${{ matrix.depconstraint }}
+        key: ${{ env.pythonLocation }}-pip-${{ matrix.depconstraint }}-${{ hashFiles('setup.py') }}
         restore-keys: |
-          ${{ env.pythonLocation }}-pip-${{ hashFiles('setup.py') }}
-          ${{ env.pythonLocation }}-pip-
+          ${{ env.pythonLocation }}-pip-${{ matrix.depconstraint }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel
