--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
     strategy:
       # Test for several versions of TFX in parallel
       matrix:
-        depconstraint: ["tfx~=1.4.0 tensorflow~=2.6.0", "tfx~=1.5.0 tensorflow~=2.7.0"]
+        # ToDo(casassg): Remove future from here once resolved upstream: https://github.com/tensorflow/transform/issues/257
+        depconstraint: ["tfx~=1.4.0 tensorflow~=2.6.0 future", "tfx~=1.6.0 tensorflow~=2.7.0"]
         extras: ["all, test"]
     steps:
     - uses: actions/checkout@v2
